OO-9283: implements standard filters for the position list